fixed some incorrect files

--- a/index.html
+++ b/index.html
@@ -13,12 +13,13 @@ title: WikiTrans
   
   <h1>Papers</h1>
   <ul class="posts">
-    <li><span>21 Aug 2009</span> &raquo; <a href="">Testing testing testing</a></li>
+    <li><span>06 Aug 2009</span> &raquo; <a href="http://cs.jhu.edu/~ccb/publications/mechanical-turk-for-machine-translation-evaluation.pdf">Fast, Cheap, and Creative: Evaluating Translation Quality Using Amazon's Mechanical Turk. Chris Callison-Burch, 2009. In Proceedings of EMNLP 2009.</a></li>
   </ul>
   
   <h1>Open Source Projects</h1>
   <ul class="posts">
-    <li><a href="http://cs.jhu.edu/~ccb/joshua/">Joshua:</a> Joshua is an open-source decoder for parsing-based machine translation..</li>
+    <li><a href="http://cs.jhu.edu/~ccb/joshua/">Joshua:</a> Joshua is an open-source decoder for parsing-based machine translation.</li>
+    <li><a href="http://www.djangoproject.com/">Django:</a> The Web framework for perfectionists with deadlines.</li>
   </ul>
 </div>
   
