--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@ title: WikiTrans
   <ul class="posts">
     <li><a href="http://cs.jhu.edu/~ccb/joshua/">Joshua:</a> Joshua is an open-source decoder for parsing-based machine translation.</li>
     <li><a href="http://www.djangoproject.com/">Django:</a> The Web framework for perfectionists with deadlines.</li>
+    <li><a href="http://www.pinaxproject.com/">Pinax:</a> A platform for rapidly developing websites.</li>
   </ul>
 </div>
   
